[gd_scene load_steps=16 format=4 uid="uid://cs0nmtfqt1ir2"]

[ext_resource type="Script" path="res://Levels/Level4/level_4.gd" id="1_jwg1g"]
[ext_resource type="PackedScene" uid="uid://b84gi54lglcbm" path="res://BG/bg.tscn" id="1_kkelp"]
[ext_resource type="Texture2D" uid="uid://b8cpe0lfp2e1t" path="res://Assets/Tiles/Simple Tileset.png" id="2_jc0sp"]
[ext_resource type="PackedScene" uid="uid://b7gy5tkgqwkns" path="res://Scene/Ladder/ladder.tscn" id="3_37kgg"]
[ext_resource type="PackedScene" uid="uid://cwfxip0hy5535" path="res://Player/player.tscn" id="4_cp0ji"]
[ext_resource type="PackedScene" uid="uid://bklt8yxsa4yvl" path="res://PauseMenu/pause_menu.tscn" id="6_ki1v1"]

[sub_resource type="GDScript" id="GDScript_12kdk"]
script/source = "extends Node

@onready var pause_menu = $\"../CanvasLayer/PauseMenu\"

var game_paused: bool = false

func _process(delta):
	if Input.is_action_just_pressed(\"ui_cancel\"):
		game_paused = !game_paused
		
	if game_paused == true:
		get_tree().paused = true
		pause_menu.show()
	else:
		get_tree().paused = false
		pause_menu.hide()

func _on_resume_pressed() -> void:
	game_paused = false

func _on_levels_pressed() -> void:
	get_tree().paused = false
	get_tree().change_scene_to_file(\"res://Levels/levels.tscn\")

func _on_quit_pressed() -> void:
	get_tree().paused = false
	get_tree().change_scene_to_file(\"res://Menu/menu.tscn\")
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pq3rh"]
size = Vector2(40, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ds1y"]
size = Vector2(50, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u6eu5"]
size = Vector2(63, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1uit"]
size = Vector2(25, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjfwa"]
size = Vector2(34.5, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gnkd"]
size = Vector2(27, 98)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jxn7v"]
texture = ExtResource("2_jc0sp")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_ldhv2"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 6
sources/0 = SubResource("TileSetAtlasSource_jxn7v")

[node name="Level4" type="Node2D"]
script = ExtResource("1_jwg1g")

[node name="Manager" type="Node" parent="."]
process_mode = 3
script = SubResource("GDScript_12kdk")

[node name="BG" parent="." instance=ExtResource("1_kkelp")]

[node name="KillTriggers" type="Node" parent="."]

[node name="Spikes1" type="Area2D" parent="KillTriggers"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillTriggers/Spikes1"]
position = Vector2(303, 549.5)
shape = SubResource("RectangleShape2D_pq3rh")

[node name="Spikes2" type="Area2D" parent="KillTriggers"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillTriggers/Spikes2"]
position = Vector2(200, 232)
shape = SubResource("RectangleShape2D_4ds1y")

[node name="Spikes3" type="Area2D" parent="KillTriggers"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillTriggers/Spikes3"]
position = Vector2(464.5, 295)
shape = SubResource("RectangleShape2D_u6eu5")

[node name="Spikes4" type="Area2D" parent="KillTriggers"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillTriggers/Spikes4"]
position = Vector2(295.5, 230)
shape = SubResource("RectangleShape2D_k1uit")

[node name="Spikes5" type="Area2D" parent="KillTriggers"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillTriggers/Spikes5"]
position = Vector2(622.25, 248)
shape = SubResource("RectangleShape2D_bjfwa")

[node name="NextLevelTrigger" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevelTrigger"]
position = Vector2(1163.5, 208)
shape = SubResource("RectangleShape2D_7gnkd")

[node name="Scene" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Scene"]
tile_map_data = PackedByteArray("AAABACMAAAABAAAAAAACACMAAAABAAAAAAADACMAAAABAAAAAAAEACMAAAABAAAAAAAFACMAAAABAAAAAAAGACMAAAABAAAAAAAHACMAAAABAAAAAAAIACMAAAABAAAAAAAJACMAAAABAAAAAAAKACMAAAABAAAAAAALACMAAAABAAAAAAAMACMAAAABAAAAAAANACMAAAABAAAAAAAOACMAAAABAAAAAAAPACMAAAABAAAAAAAQACMAAAABAAAAAAARACMAAAABAAAAAAASACMAAAABAAAAAAATACMAAAABAAAAAAAUACMAAAABAAAAAAAVACMAAAABAAAAAAAWACMAAAABAAAAAAAXACMAAAABAAAAAAAYACMAAAABAAAAAAAZACMAAAABAAAAAAAaACMAAAABAAAAAAAbACMAAAABAAAAAAAcACMAAAABAAAAAAAdACMAAAABAAAAAAAeACMAAAABAAAAAAAfACMAAAABAAAAAAAgACMAAAABAAAAAAAhACMAAAABAAAAAAAiACMAAAABAAAAAAAjACMAAAABAAAAAAAkACMAAAABAAAAAAAlACMAAAABAAAAAAAmACMAAAABAAAAAAAnACMAAAABAAAAAAAoACMAAAABAAAAAAApACMAAAABAAAAAAAqACMAAAABAAAAAAArACMAAAABAAAAAAAsACMAAAABAAAAAAAtACMAAAABAAAAAAAuACMAAAABAAAAAAAvACMAAAABAAAAAAAwACMAAAABAAAAAAAxACMAAAABAAAAAAAyACMAAAABAAAAAAAzACMAAAABAAAAAAA0ACMAAAABAAAAAAA1ACMAAAABAAAAAAA2ACMAAAABAAAAAAA3ACMAAAABAAAAAAA4ACMAAAABAAAAAAA5ACMAAAABAAAAAAA6ACMAAAABAAAAAAA7ACMAAAABAAAAAAA8ACMAAAABAAAAAAA9ACMAAAABAAAAAAA+ACMAAAABAAAAAAA/ACMAAAABAAAAAABAACMAAAABAAAAAABBACMAAAABAAAAAABCACMAAAABAAAAAABDACMAAAABAAAAAABEACMAAAABAAAAAABFACMAAAABAAAAAABGACMAAAABAAAAAABHACMAAAACAAEAAAABACYAAAABAAEAAAACACYAAAABAAEAAAADACYAAAABAAEAAAAEACYAAAABAAEAAAAFACYAAAABAAEAAAAGACYAAAABAAEAAAAHACYAAAABAAEAAAAIACYAAAABAAEAAAAJACYAAAABAAEAAAAKACYAAAABAAEAAAALACYAAAABAAEAAAAMACYAAAABAAEAAAANACYAAAABAAEAAAAOACYAAAABAAEAAAAPACYAAAABAAEAAAAQACYAAAABAAEAAAARACYAAAABAAEAAAASACYAAAABAAEAAAATACYAAAABAAEAAAAUACYAAAABAAEAAAAVACYAAAABAAEAAAAWACYAAAABAAEAAAAXACYAAAABAAEAAAAYACYAAAABAAEAAAAZACYAAAABAAEAAAAaACYAAAABAAEAAAAbACYAAAABAAEAAAAcACYAAAABAAEAAAAdACYAAAABAAEAAAAeACYAAAABAAEAAAAfACYAAAABAAEAAAAgACYAAAABAAEAAAAhACYAAAABAAEAAAAiACYAAAABAAEAAAAjACYAAAABAAEAAAAkACYAAAABAAEAAAAlACYAAAABAAEAAAAmACYAAAABAAEAAAAnACYAAAABAAEAAAAoACYAAAABAAEAAAApACYAAAABAAEAAAAqACYAAAABAAEAAAArACYAAAABAAEAAAAsACYAAAABAAEAAAAtACYAAAABAAEAAAAuACYAAAABAAEAAAAvACYAAAABAAEAAAAwACYAAAABAAEAAAAxACYAAAABAAEAAAAyACYAAAABAAEAAAAzACYAAAABAAEAAAA0ACYAAAABAAEAAAA1ACYAAAABAAEAAAA2ACYAAAABAAEAAAA3ACYAAAABAAEAAAA4ACYAAAABAAEAAAA5ACYAAAABAAEAAAA6ACYAAAABAAEAAAA7ACYAAAABAAEAAAA8ACYAAAABAAEAAAA9ACYAAAABAAEAAAA+ACYAAAABAAEAAAA/ACYAAAABAAEAAABAACYAAAABAAEAAABBACYAAAABAAEAAABCACYAAAABAAEAAABDACYAAAABAAEAAABEACYAAAABAAEAAABFACYAAAABAAEAAABGACYAAAABAAEAAABGACUAAAABAAEAAABFACUAAAABAAEAAABFACQAAAABAAEAAABGACQAAAABAAEAAABEACQAAAABAAEAAABDACQAAAABAAEAAABCACQAAAABAAEAAABBACQAAAABAAEAAABAACQAAAABAAEAAAA/ACQAAAABAAEAAAA+ACQAAAABAAEAAAA9ACQAAAABAAEAAAA8ACQAAAABAAEAAAA7ACQAAAABAAEAAAA6ACQAAAABAAEAAAA5ACQAAAABAAEAAAA4ACQAAAABAAEAAAA3ACQAAAABAAEAAAA2ACQAAAABAAEAAAA1ACQAAAABAAEAAAA0ACQAAAABAAEAAAAzACUAAAABAAEAAAAyACUAAAABAAEAAAAxACUAAAABAAEAAAAwACUAAAABAAEAAAAvACUAAAABAAEAAAAuACUAAAABAAEAAAAtACUAAAABAAEAAAAsACUAAAABAAEAAAAsACQAAAABAAEAAAArACQAAAABAAEAAAAqACQAAAABAAEAAAApACQAAAABAAEAAAAoACQAAAABAAEAAAAnACQAAAABAAEAAAAmACQAAAABAAEAAAAlACQAAAABAAEAAAAkACQAAAABAAEAAAAjACQAAAABAAEAAAAiACQAAAABAAEAAAAhACQAAAABAAEAAAAgACQAAAABAAEAAAAfACQAAAABAAEAAAAeACQAAAABAAEAAAAdACQAAAABAAEAAAAcACQAAAABAAEAAAAbACQAAAABAAEAAAAaACQAAAABAAEAAAAZACQAAAABAAEAAAAYACQAAAABAAEAAAAXACQAAAABAAEAAAAWACQAAAABAAEAAAAVACQAAAABAAEAAAAUACQAAAABAAEAAAATACQAAAABAAEAAAASACQAAAABAAEAAAARACQAAAABAAEAAAAQACQAAAABAAEAAAAPACQAAAABAAEAAAAOACQAAAABAAEAAAAOACUAAAABAAEAAAANACUAAAABAAEAAAAMACUAAAABAAEAAAALACUAAAABAAEAAAAKACUAAAABAAEAAAAJACUAAAABAAEAAAAIACUAAAABAAEAAAAHACUAAAABAAEAAAAGACUAAAABAAEAAAAFACUAAAABAAEAAAAEACUAAAABAAEAAAADACUAAAABAAEAAAACACUAAAABAAEAAAABACUAAAABAAEAAAABACQAAAABAAEAAAACACQAAAABAAEAAAADACQAAAABAAEAAAAEACQAAAABAAEAAAAFACQAAAABAAEAAAAGACQAAAABAAEAAAAHACQAAAABAAEAAAAIACQAAAABAAEAAAAJACQAAAABAAEAAAAKACQAAAABAAEAAAALACQAAAABAAEAAAAMACQAAAABAAEAAAANACQAAAABAAEAAAAPACUAAAABAAEAAAAQACUAAAABAAEAAAARACUAAAABAAEAAAASACUAAAABAAEAAAATACUAAAABAAEAAAAUACUAAAABAAEAAAAVACUAAAABAAEAAAAWACUAAAABAAEAAAAXACUAAAABAAEAAAAYACUAAAABAAEAAAAZACUAAAABAAEAAAAaACUAAAABAAEAAAAbACUAAAABAAEAAAAcACUAAAABAAEAAAAdACUAAAABAAEAAAAeACUAAAABAAEAAAAfACUAAAABAAEAAAApACUAAAABAAEAAAAqACUAAAABAAEAAAArACUAAAABAAEAAAAoACUAAAABAAEAAAAnACUAAAABAAEAAAAmACUAAAABAAEAAAAlACUAAAABAAEAAAAkACUAAAABAAEAAAAjACUAAAABAAEAAAAiACUAAAABAAEAAAAhACUAAAABAAEAAAAgACUAAAABAAEAAAAtACQAAAABAAEAAAAuACQAAAABAAEAAAAvACQAAAABAAEAAAAwACQAAAABAAEAAAAxACQAAAABAAEAAAAyACQAAAABAAEAAAAzACQAAAABAAEAAAA0ACUAAAABAAEAAAA1ACUAAAABAAEAAAA2ACUAAAABAAEAAAA3ACUAAAABAAEAAAA4ACUAAAABAAEAAAA5ACUAAAABAAEAAAA6ACUAAAABAAEAAAA7ACUAAAABAAEAAAA8ACUAAAABAAEAAAA9ACUAAAABAAEAAAA+ACUAAAABAAEAAAA/ACUAAAABAAEAAABAACUAAAABAAEAAABBACUAAAABAAEAAABCACUAAAABAAEAAABDACUAAAABAAEAAABEACUAAAABAAEAAAAAACQAAAAAAAEAAAAAACUAAAAAAAEAAAAAACYAAAAAAAEAAAAAACcAAAAAAAEAAABHACQAAAACAAEAAABHACUAAAACAAEAAABHACYAAAACAAEAAABHACcAAAACAAEAAABHACgAAAACAAIAAAAAACgAAAAAAAIAAAABACgAAAABAAIAAAACACgAAAABAAIAAAADACgAAAABAAIAAAAEACgAAAABAAIAAAAFACgAAAABAAIAAAAGACgAAAABAAIAAAAHACgAAAABAAIAAAAIACgAAAABAAIAAAAJACgAAAABAAIAAAAKACgAAAABAAIAAAALACgAAAABAAIAAAAMACgAAAABAAIAAAANACgAAAABAAIAAAAOACgAAAABAAIAAAAPACgAAAABAAIAAAAQACgAAAABAAIAAAARACgAAAABAAIAAAASACgAAAABAAIAAAATACgAAAABAAIAAAAUACgAAAABAAIAAAAVACgAAAABAAIAAAAWACgAAAABAAIAAAAXACgAAAABAAIAAAAYACgAAAABAAIAAAAZACgAAAABAAIAAAAaACgAAAABAAIAAAAbACgAAAABAAIAAAAcACgAAAABAAIAAAAdACgAAAABAAIAAAAeACgAAAABAAIAAAAfACgAAAABAAIAAAAgACgAAAABAAIAAAAhACgAAAABAAIAAAAiACgAAAABAAIAAAAjACgAAAABAAIAAAAkACgAAAABAAIAAAAlACgAAAABAAIAAAAmACgAAAABAAIAAAAnACgAAAABAAIAAAAoACgAAAABAAIAAAApACgAAAABAAIAAAAqACgAAAABAAIAAAArACgAAAABAAIAAAAsACgAAAABAAIAAAAtACgAAAABAAIAAAAuACgAAAABAAIAAAAvACgAAAABAAIAAAAwACgAAAABAAIAAAAxACgAAAABAAIAAAAyACgAAAABAAIAAAAzACgAAAABAAIAAAA0ACgAAAABAAIAAAA1ACgAAAABAAIAAAA2ACgAAAABAAIAAAA3ACgAAAABAAIAAAA4ACgAAAABAAIAAAA5ACgAAAABAAIAAAA6ACgAAAABAAIAAAA7ACgAAAABAAIAAAA8ACgAAAABAAIAAAA9ACgAAAABAAIAAAA+ACgAAAABAAIAAAA/ACgAAAABAAIAAABAACgAAAABAAIAAABBACgAAAABAAIAAABCACgAAAABAAIAAABDACgAAAABAAIAAABEACgAAAABAAIAAABFACgAAAABAAIAAABGACgAAAABAAIAAAABACcAAAABAAEAAAACACcAAAABAAEAAAADACcAAAABAAEAAAAEACcAAAABAAEAAAAFACcAAAABAAEAAAAGACcAAAABAAEAAAAHACcAAAABAAEAAAAIACcAAAABAAEAAAAJACcAAAABAAEAAAAKACcAAAABAAEAAAALACcAAAABAAEAAAAMACcAAAABAAEAAAANACcAAAABAAEAAAAOACcAAAABAAEAAAAPACcAAAABAAEAAAAQACcAAAABAAEAAAARACcAAAABAAEAAAASACcAAAABAAEAAAATACcAAAABAAEAAAAUACcAAAABAAEAAAAVACcAAAABAAEAAAAWACcAAAABAAEAAAAXACcAAAABAAEAAAAYACcAAAABAAEAAAAZACcAAAABAAEAAAAaACcAAAABAAEAAAAbACcAAAABAAEAAAAcACcAAAABAAEAAAAdACcAAAABAAEAAAAeACcAAAABAAEAAAAfACcAAAABAAEAAAAgACcAAAABAAEAAAAhACcAAAABAAEAAAAiACcAAAABAAEAAAAjACcAAAABAAEAAAAkACcAAAABAAEAAAAlACcAAAABAAEAAAAmACcAAAABAAEAAAAnACcAAAABAAEAAAAoACcAAAABAAEAAAApACcAAAABAAEAAAAqACcAAAABAAEAAAArACcAAAABAAEAAAAsACcAAAABAAEAAAAtACcAAAABAAEAAAAuACcAAAABAAEAAAAvACcAAAABAAEAAAAwACcAAAABAAEAAAAxACcAAAABAAEAAAAyACcAAAABAAEAAAAzACcAAAABAAEAAAA0ACcAAAABAAEAAAA1ACcAAAABAAEAAAA2ACcAAAABAAEAAAA3ACcAAAABAAEAAAA4ACcAAAABAAEAAAA5ACcAAAABAAEAAAA6ACcAAAABAAEAAAA7ACcAAAABAAEAAAA8ACcAAAABAAEAAAA9ACcAAAABAAEAAAA+ACcAAAABAAEAAAA/ACcAAAABAAEAAABAACcAAAABAAEAAABBACcAAAABAAEAAABCACcAAAABAAEAAABDACcAAAABAAEAAABEACcAAAABAAEAAABFACcAAAABAAEAAABGACcAAAABAAEAAAAAACMAAAAAAAEAAAAAACIAAAAAAAEAAAAAACEAAAAAAAEAAAAAACAAAAAAAAEAAAAAAB8AAAAAAAEAAAAAAB4AAAAAAAEAAAAAAB0AAAAAAAEAAAAAABwAAAAAAAEAAAAAABsAAAAAAAEAAAAAABoAAAAAAAEAAAAAABkAAAAAAAEAAAAAABgAAAAAAAEAAAAAABcAAAAAAAEAAAAAABYAAAAAAAEAAAAAABUAAAAAAAEAAAAAABQAAAAAAAEAAAAAABMAAAAAAAEAAAAAABIAAAAAAAEAAAAAABEAAAAAAAEAAAAAABAAAAAAAAEAAAAAAA8AAAAAAAEAAAAAAA4AAAAAAAEAAAAAAA0AAAAAAAEAAAAAAAwAAAAAAAEAAAAAAAsAAAAAAAEAAAAAAAoAAAAAAAEAAAAAAAkAAAAAAAEAAAAAAAgAAAAAAAEAAAAAAAcAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAAAAAAAAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAKAAAAAAABAAAAAAALAAAAAAABAAAAAAAMAAAAAAABAAAAAAANAAAAAAABAAAAAAAOAAAAAAABAAAAAAAPAAAAAAABAAAAAAAQAAAAAAABAAAAAAARAAAAAAABAAAAAAASAAAAAAABAAAAAAATAAAAAAABAAAAAAAUAAAAAAABAAAAAAAVAAAAAAABAAAAAAAWAAAAAAABAAAAAAAXAAAAAAABAAAAAAAYAAAAAAABAAAAAAAZAAAAAAABAAAAAAAaAAAAAAABAAAAAAAbAAAAAAABAAAAAAAcAAAAAAABAAAAAAAdAAAAAAABAAAAAAAeAAAAAAABAAAAAAAfAAAAAAABAAAAAAAgAAAAAAABAAAAAAAhAAAAAAABAAAAAAAiAAAAAAABAAAAAAAjAAAAAAABAAAAAAAkAAAAAAABAAAAAAAlAAAAAAABAAAAAAAmAAAAAAABAAAAAAAnAAAAAAABAAAAAAAoAAAAAAABAAAAAAApAAAAAAABAAAAAAAqAAAAAAABAAAAAAArAAAAAAABAAAAAAAsAAAAAAABAAAAAAAtAAAAAAABAAAAAAAuAAAAAAABAAAAAAAvAAAAAAABAAAAAAAwAAAAAAABAAAAAAAxAAAAAAABAAAAAAAyAAAAAAABAAAAAAAzAAAAAAABAAAAAAA0AAAAAAABAAAAAAA1AAAAAAABAAAAAAA2AAAAAAABAAAAAAA3AAAAAAABAAAAAAA4AAAAAAABAAAAAABHACIAAAACAAEAAABHACEAAAACAAEAAABHACAAAAACAAEAAABHAB8AAAACAAEAAABHAB4AAAACAAEAAABHAB0AAAACAAEAAABHABwAAAACAAEAAABHABsAAAACAAEAAABHABoAAAACAAEAAABHABkAAAACAAEAAABHABgAAAACAAEAAABHABcAAAACAAEAAABHABYAAAACAAEAAABHABUAAAACAAEAAABHABQAAAACAAEAAABHABMAAAACAAEAAABHABIAAAACAAEAAABHABEAAAACAAEAAABHABAAAAACAAEAAABHAAkAAAACAAEAAABHAAgAAAACAAEAAABHAAcAAAACAAEAAABHAAYAAAACAAEAAABHAAUAAAACAAEAAABHAAQAAAACAAEAAABHAAMAAAACAAEAAABHAAIAAAACAAEAAABHAAEAAAACAAEAAABHAAAAAAACAAAAAAA5AAAAAAABAAAAAAA6AAAAAAABAAAAAAA7AAAAAAABAAAAAAA8AAAAAAABAAAAAAA9AAAAAAABAAAAAAA+AAAAAAABAAAAAAA/AAAAAAABAAAAAABAAAAAAAABAAAAAABBAAAAAAABAAAAAABCAAAAAAABAAAAAABDAAAAAAABAAAAAABEAAAAAAABAAAAAABFAAAAAAABAAAAAABGAAAAAAABAAAAAABGABAAAAADAAIAAABFABAAAAADAAIAAABEABAAAAADAAIAAABDABAAAAADAAIAAABCABAAAAADAAIAAABBABAAAAADAAIAAABAABAAAAADAAIAAAA/ABAAAAADAAIAAAA+ABAAAAADAAIAAAA9ABAAAAADAAIAAAA8ABAAAAADAAIAAAA7ABAAAAADAAIAAAA6ABAAAAADAAIAAAA5ABAAAAADAAIAAAA4ABAAAAADAAIAAAA1ABAAAAADAAIAAAA3ABAAAAADAAIAAAA2ABAAAAADAAIAAAABABwAAAAHAAAAAAACABwAAAAHAAAAAAADABwAAAAHAAAAAAAEABwAAAAHAAAAAAAFABwAAAAHAAAAAAAGABwAAAAHAAAAAAAHABwAAAAHAAAAAAAIABwAAAAHAAAAAAAJABwAAAAHAAAAAAAOACIAAAAHAAAAAAAOACEAAAAHAAAAAAAOACAAAAAHAAAAAAAOAB8AAAAHAAAAAAAOAB4AAAAHAAAAAAAOAB0AAAAHAAAAAAAOABwAAAAHAAAAAAAOABsAAAAHAAAAAAAOABoAAAAHAAAAAAAOABkAAAAHAAAAAAAOABgAAAAHAAAAAAAOABcAAAAHAAAAAAAOABYAAAAHAAAAAAANABYAAAAHAAAAAAAMABYAAAAHAAAAAAALABYAAAAHAAAAAAAKABYAAAAHAAAAAAAJABYAAAAHAAAAAAAIABYAAAAHAAAAAAAHABYAAAAHAAAAAAAGABYAAAAHAAAAAAAFABYAAAAHAAAAAAABAA8AAAAHAAAAAAACAA8AAAAHAAAAAAADAA8AAAAHAAAAAAAEAA8AAAAHAAAAAAAFAA8AAAAHAAAAAAAGAA8AAAAHAAAAAAAHAA8AAAAHAAAAAAAIAA8AAAAHAAAAAAAJAA8AAAAHAAAAAAAKAA8AAAAHAAAAAAALAA8AAAAHAAAAAAAMAA8AAAAHAAAAAAANAA8AAAAHAAAAAAAOAA8AAAAHAAAAAAAPAA8AAAAHAAAAAAAQAA8AAAAHAAAAAAARAA8AAAAHAAAAAAASAA8AAAAHAAAAAAATAA8AAAAHAAAAAAAUAA8AAAAHAAAAAAAVAA8AAAAHAAAAAAAWAA8AAAAHAAAAAAAWABAAAAAHAAAAAAAWABEAAAAHAAAAAAAWABIAAAAHAAAAAAAWABMAAAAHAAAAAAAWABQAAAAHAAAAAAAWABUAAAAHAAAAAAAWABYAAAAHAAAAAAAWABcAAAAHAAAAAAAWABgAAAAHAAAAAAAWABkAAAAHAAAAAAAWABoAAAAHAAAAAAAWABsAAAAHAAAAAAAWABwAAAAHAAAAAAAXABwAAAAHAAAAAAAYABwAAAAHAAAAAAAZABwAAAAHAAAAAAAaABwAAAAHAAAAAAAbABwAAAAHAAAAAAAgABwAAAAHAAAAAAAgABsAAAAHAAAAAAAgABoAAAAHAAAAAAAgABkAAAAHAAAAAAAgABgAAAAHAAAAAAAgABcAAAAHAAAAAAAgABYAAAAHAAAAAAAgABUAAAAHAAAAAAAgABQAAAAHAAAAAAAgABMAAAAHAAAAAAAgABIAAAAHAAAAAAAgABEAAAAHAAAAAAAgABAAAAAHAAAAAAAhABAAAAAHAAAAAAAiABAAAAAHAAAAAAAjABAAAAAHAAAAAAAkABAAAAAHAAAAAAAlABAAAAAHAAAAAAAmABAAAAAHAAAAAAAnABAAAAAHAAAAAAAoABAAAAAHAAAAAAAoAA8AAAAHAAAAAAAoAA4AAAAHAAAAAAAoAA0AAAAHAAAAAAAoAAwAAAAHAAAAAAAoAAsAAAAHAAAAAAAoAAoAAAAHAAAAAAAoAAkAAAAHAAAAAAAvAAkAAAAHAAAAAAAvAAoAAAAHAAAAAAAvAAsAAAAHAAAAAAAvAA0AAAAHAAAAAAAvAAwAAAAHAAAAAAAvAA4AAAAHAAAAAAAvAA8AAAAHAAAAAAAvABAAAAAHAAAAAAAwABAAAAAHAAAAAAAxABAAAAAHAAAAAAAyABAAAAAHAAAAAAAzABAAAAAHAAAAAAA0ABAAAAAHAAAAAAApAAkAAAAHAAAAAAAqAAkAAAAHAAAAAAArAAkAAAAHAAAAAAAsAAkAAAAHAAAAAAAtAAkAAAAHAAAAAAAuAAkAAAAHAAAAAAAmAA8AAAADAAMAAAAnAA8AAAADAAMAAAAlAAUAAAAHAAAAAAAkAAUAAAAHAAAAAAAjAAUAAAAHAAAAAAAiAAUAAAAHAAAAAAAhAAUAAAAHAAAAAAAgAAUAAAAHAAAAAAAfAAUAAAAHAAAAAAAeAAUAAAAHAAAAAAAdAAUAAAAHAAAAAAAcAAUAAAAHAAAAAAAbAAUAAAAHAAAAAAAaAAUAAAAHAAAAAAAZAAUAAAAHAAAAAAAYAAUAAAAHAAAAAAAXAAUAAAAHAAAAAAAoAAgAAAAHAAAAAAAoAAcAAAAHAAAAAAApAAcAAAAHAAAAAAApAAgAAAAHAAAAAAAWAAUAAAAHAAAAAAAVAAUAAAAHAAAAAAAUAAUAAAAHAAAAAAATAAUAAAAHAAAAAAASAAUAAAAHAAAAAAARAAUAAAAHAAAAAAAQAAUAAAAHAAAAAAAPAAUAAAAHAAAAAAAOAAUAAAAHAAAAAAANAAUAAAAHAAAAAAAMAAUAAAAHAAAAAAALAAUAAAAHAAAAAAAKAAUAAAAHAAAAAAAJAAUAAAAHAAAAAAAIAAUAAAAHAAAAAAAHAAUAAAAHAAAAAAAGAAUAAAAHAAAAAAAFAAUAAAAHAAAAAAAFAAYAAAAHAAAAAAAFAAcAAAAHAAAAAAAEAAcAAAAHAAAAAAAbABMAAAAHAAAAAAAcABMAAAAHAAAAAAAdABMAAAAHAAAAAAAeABMAAAAHAAAAAAAfABMAAAAHAAAAAAALAA4AAAADAAMAAAANAA4AAAADAAMAAAAMAA4AAAADAAMAAAAbABIAAAADAAMAAAAcABIAAAADAAMAAAAdABIAAAADAAMAAAAeABIAAAADAAMAAAASAA4AAAADAAMAAAASACIAAAADAAMAAAATACIAAAADAAMAAAAbABQAAAADAAAAAAAaABQAAAADAAAAAAA=")
tile_set = SubResource("TileSet_ldhv2")

[node name="Ladder" parent="Scene" instance=ExtResource("3_37kgg")]
position = Vector2(174, 497)

[node name="Ladder2" parent="Scene" instance=ExtResource("3_37kgg")]
position = Vector2(65, 388)

[node name="Ladder3" parent="Scene" instance=ExtResource("3_37kgg")]
position = Vector2(463, 494)

[node name="Ladder4" parent="Scene" instance=ExtResource("3_37kgg")]
position = Vector2(383, 385)

[node name="Ladder5" parent="Scene" instance=ExtResource("3_37kgg")]
position = Vector2(33, 177)

[node name="Player" parent="Scene" instance=ExtResource("4_cp0ji")]
position = Vector2(73, 527)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("6_ki1v1")]
process_mode = 2

[connection signal="body_entered" from="NextLevelTrigger" to="." method="_on_next_level_trigger_body_entered"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Panel/VBoxContainer/Resume" to="Manager" method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Panel/VBoxContainer/Levels" to="Manager" method="_on_levels_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Panel/VBoxContainer/Quit" to="Manager" method="_on_quit_pressed"]

[editable path="CanvasLayer/PauseMenu"]
